elf: Allow SCDP Provider to find compiler at predefined path
This commit modifies ARC GCC Specs files provider for SCD profile. The
provider should be able to find GCC at the predefined location of "bin"
folder relatively to Eclipse, even when it is not in the PATH.
Previously that was achieved by appending bin to the PATH dynamically,
but that can be also achieved by recalculating the path correctly during
the initialization, which this commit does.

--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -2926,7 +2926,7 @@
             providerId="specsFile">
          <run
                arguments="-E -P -v -dD ${plugin_state_location}/specs.c"
-               class="org.eclipse.cdt.cross.arc.gnu.common.ARCGCCSpecsRunSIProvider"
+               class="com.synopsys.arc.gnu.elf.scannerconfig.ArcScannerInfoRunProvider"
                command="arc-elf32-gcc">
          </run>
          <scannerInfoConsoleParser
@@ -2952,7 +2952,7 @@
             providerId="specsFile">
          <run
                arguments="-E -P -v -dD ${plugin_state_location}/specs.c"
-               class="org.eclipse.cdt.cross.arc.gnu.common.ARCGCCSpecsRunSIProvider"
+               class="com.synopsys.arc.gnu.elf.scannerconfig.ArcScannerInfoRunProvider"
                command="arceb-elf32-gcc">
          </run>
          <scannerInfoConsoleParser
@@ -2978,7 +2978,7 @@
             providerId="specsFile">
          <run
                arguments="-E -P -v -dD ${plugin_state_location}/specs.cpp"
-               class="org.eclipse.cdt.cross.arc.gnu.common.ARCGCCSpecsRunSIProvider"
+               class="com.synopsys.arc.gnu.elf.scannerconfig.ArcScannerInfoRunProvider"
                command="arc-elf32-g++">
          </run>
          <scannerInfoConsoleParser
@@ -3004,7 +3004,7 @@
             providerId="specsFile">
          <run
                arguments="-E -P -v -dD ${plugin_state_location}/specs.cpp"
-               class="org.eclipse.cdt.cross.arc.gnu.common.ARCGCCSpecsRunSIProvider"
+               class="com.synopsys.arc.gnu.elf.scannerconfig.ArcScannerInfoRunProvider"
                command="arceb-elf32-g++">
          </run>
          <scannerInfoConsoleParser
