--- a/org.eclipse.cdt.cross.arc.gnu/.settings/org.eclipse.jdt.ui.prefs
+++ b/org.eclipse.cdt.cross.arc.gnu/.settings/org.eclipse.jdt.ui.prefs
@@ -48,20 +48,22 @@ cleanup.remove_unused_private_types=true
 cleanup.sort_members=false
 cleanup.sort_members_all=false
 cleanup.use_anonymous_class_creation=false
+cleanup.use_autoboxing=false
 cleanup.use_blocks=true
 cleanup.use_blocks_only_for_return_and_throw=false
 cleanup.use_lambda=true
 cleanup.use_parentheses_in_expressions=false
-cleanup.use_this_for_non_static_field_access=true
+cleanup.use_this_for_non_static_field_access=false
 cleanup.use_this_for_non_static_field_access_only_if_necessary=false
 cleanup.use_this_for_non_static_method_access=false
 cleanup.use_this_for_non_static_method_access_only_if_necessary=false
+cleanup.use_unboxing=false
 cleanup_profile=_arc.debug-cleanup
 cleanup_settings_version=2
 eclipse.preferences.version=1
 editor_save_participant_org.eclipse.jdt.ui.postsavelistener.cleanup=true
 formatter_profile=_arc.debug.style
-formatter_settings_version=15
+formatter_settings_version=17
 org.eclipse.jdt.ui.text.custom_code_templates=
 sp_cleanup.add_default_serial_version_id=true
 sp_cleanup.add_generated_serial_version_id=false
@@ -79,8 +81,8 @@ sp_cleanup.always_use_this_for_non_static_method_access=false
 sp_cleanup.convert_functional_interfaces=true
 sp_cleanup.convert_to_enhanced_for_loop=true
 sp_cleanup.correct_indentation=true
-sp_cleanup.format_source_code=false
-sp_cleanup.format_source_code_changes_only=true
+sp_cleanup.format_source_code=true
+sp_cleanup.format_source_code_changes_only=false
 sp_cleanup.insert_inferred_type_arguments=false
 sp_cleanup.make_local_variable_final=true
 sp_cleanup.make_parameters_final=false
@@ -89,7 +91,7 @@ sp_cleanup.make_type_abstract_if_missing_method=false
 sp_cleanup.make_variable_declarations_final=false
 sp_cleanup.never_use_blocks=false
 sp_cleanup.never_use_parentheses_in_expressions=true
-sp_cleanup.on_save_use_additional_actions=false
+sp_cleanup.on_save_use_additional_actions=true
 sp_cleanup.organize_imports=true
 sp_cleanup.qualify_static_field_accesses_with_declaring_class=false
 sp_cleanup.qualify_static_member_accesses_through_instances_with_declaring_class=true
@@ -114,6 +116,7 @@ sp_cleanup.remove_unused_private_types=true
 sp_cleanup.sort_members=false
 sp_cleanup.sort_members_all=false
 sp_cleanup.use_anonymous_class_creation=false
+sp_cleanup.use_autoboxing=false
 sp_cleanup.use_blocks=true
 sp_cleanup.use_blocks_only_for_return_and_throw=false
 sp_cleanup.use_lambda=true
@@ -122,3 +125,4 @@ sp_cleanup.use_this_for_non_static_field_access=false
 sp_cleanup.use_this_for_non_static_field_access_only_if_necessary=true
 sp_cleanup.use_this_for_non_static_method_access=false
 sp_cleanup.use_this_for_non_static_method_access_only_if_necessary=true
+sp_cleanup.use_unboxing=false
