--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -254,7 +254,7 @@
                </checkBuildProperty>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <checkOption
                      optionId="arc.gnu.elf.option.target.use_tcf"
                      value="false">
@@ -300,7 +300,7 @@
                </checkBuildProperty>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <checkOption
                      optionId="arc.gnu.elf.option.target.use_tcf"
                      value="false">
@@ -403,7 +403,7 @@
                </checkBuildProperty>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <not>
                   <or>
                      <checkOption
@@ -480,7 +480,7 @@
                </checkBuildProperty>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <not>
                   <or>
                      <checkOption
@@ -598,7 +598,7 @@
                </checkBuildProperty>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <not>
                   <or>
                      <checkOption
@@ -663,7 +663,7 @@
                </checkBuildProperty>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <not>
                   <or>
                      <checkOption
@@ -737,7 +737,7 @@
                   </checkBuildProperty></or>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <not>
                   <or>
                      <checkOption
@@ -786,7 +786,7 @@
                </checkBuildProperty>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <not>
                   <or>
                      <checkOption
@@ -833,7 +833,7 @@
                </not>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <not>
                   <or>
                      <checkOption
@@ -891,7 +891,7 @@
                </not>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <not>
                   <or>
                      <checkOption
@@ -939,7 +939,7 @@
                </not>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <not>
                   <or>
                      <checkOption
@@ -985,7 +985,7 @@
                </checkBuildProperty>
             </enablement>
             <enablement
-                  type="UI_ENABLEMENT">
+                  type="UI_ENABLEMENT|CMD_USAGE">
                <not>
                   <or>
                      <checkOption
