--- a/gnu.elf/pom.xml
+++ b/gnu.elf/pom.xml
@@ -2,10 +2,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.arc.cdt</groupId>
+    <groupId>com.synopsys.arc.gnu</groupId>
     <artifactId>plugin</artifactId>
     <version>2019.9.0-SNAPSHOT</version>
   </parent>
-  <artifactId>org.eclipse.cdt.cross.arc.gnu</artifactId>
+  <artifactId>com.synopsys.arc.gnu.elf</artifactId>
   <packaging>eclipse-plugin</packaging>
 </project>
