--- a/pom.xml
+++ b/pom.xml
@@ -15,21 +15,22 @@
 
   <properties>
     <!-- Path to Eclipse p2 repository -->
-    <eclipse.repository>http://ftp-stud.fht-esslingen.de/pub/Mirrors/eclipse/releases/2018-12/</eclipse.repository>
+    <eclipse.mirror>http://ftp-stud.fht-esslingen.de/pub/Mirrors/eclipse</eclipse.mirror>
+    <eclipse.version>2019-09</eclipse.version>
     <!-- Path to CDT p2 repository -->
-    <cdt.repository>http://ftp-stud.fht-esslingen.de/pub/Mirrors/eclipse/tools/cdt/releases/9.6/</cdt.repository>
+    <cdt.version>9.9</cdt.version>
     <tycho-version>1.3.0</tycho-version>
   </properties>
 
   <repositories>
     <repository>
       <id>cdt</id>
-      <url>${cdt.repository}</url>
+      <url>${eclipse.mirror}/tools/cdt/releases/${cdt.version}/</url>
       <layout>p2</layout>
     </repository>
     <repository>
-      <id>eclipse-photon</id>
-      <url>${eclipse.repository}</url>
+      <id>eclipse</id>
+      <url>${eclipse.mirror}/releases/${eclipse.version}/</url>
       <layout>p2</layout>
     </repository>
   </repositories>
