--- a/gnu.elf/plugin.xml
+++ b/gnu.elf/plugin.xml
@@ -1,17 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.2"?>
 <plugin>
-    <!---->
-    <!--#################################################################################-->
-    <!--* This program and the accompanying materials                                    -->
-    <!--* are made available under the terms of the Common Public License v1.0           -->
-    <!--* which accompanies this distribution, and is available at                       -->
-    <!--* http://www.eclipse.org/legal/cpl-v10.html                                      -->
-    <!--*                                                                                -->
-    <!--* Contributors:                                                                  -->
-    <!--*     Synopsys, Inc. - ARC GNU Toolchain support                                 -->
-    <!--#################################################################################-->
-    <!---->
+   <!-- SPDX-License-Identifier: EPL-2.0 -->
    <extension
          id="ARC_GCC_BuildProperties"
          name="Build Properties"
