elf: Internationalize some option strings
This commit focuses on internationalizing -mcpu, -mfpu and -mmpy-option
strings.

--- a/gnu.elf/gnu.elf.properties
+++ b/gnu.elf/gnu.elf.properties
@@ -1,5 +1,31 @@
-debug = Debug
-release = Release
+#
+# Manifest
+#
+plugin.vendor = Synopsys, Inc.
+plugin.name = GNU Toolchain for ARC Build Support
+
+#
+# Build properties
+#
+extension.properties = Build Properties
+buildArtifactType.application = ARC Cross ELF32 Target Application
+buildArtifactType.staticLib = ARC Cross ELF32 Target Static Library
+buildArtifactType.axs101 = ARC AXS101 Projects
+buildArtifactType.axs103 = ARC AXS103 Projects
+buildArtifactType.emsk = ARC EM Starter Kit Projects
+buildArtifactType.iotdk = ARC IoT Development Kit Projects
+buildArtifactType.hsdk = ARC HS Development Kit Projects
+buildArtifactType.emsdp = ARC EM SDP Projects
+property.cpu = ARC CPU family
+property.cpu.em = ARC EM CPU
+property.cpu.hs = ARC HS CPU
+property.cpu.arc700 = ARC700 CPU
+property.cpu.arc600 = ARC600 CPU
+
+#
+# Build definitions
+#
+extension.buildDefinitions = Managed Build Definitions
 
 # Base toolchain
 base.platform = ARC Platform
@@ -11,9 +37,66 @@ option.target.use_tcf = Use TCF
 option.target.tcf_path = TCF Path
 option.target.tcf_map = Use memory map from TCF
 option.target.tcf_cinclude = Include C defines from TCF
+# -mcpu=
 option.target.cpu = Processor (-mcpu)
+option.target.cpuem.arcem = -mcpu=arcem
+option.target.cpuem.em = -mcpu=em
+option.target.cpuem.em4 = -mcpu=em4
+option.target.cpuem.em4_dmips = -mcpu=em4_dmips
+option.target.cpuem.em4_fpus = -mcpu=em4_fpus
+option.target.cpuem.em4_fpuda = -mcpu=em4_fpuda
+option.target.cpuhs.archs = -mcpu=archs
+option.target.cpuhs.hs = -mcpu=hs
+option.target.cpuhs.hs34 = -mcpu=hs34
+option.target.cpuhs.hs38 = -mcpu=hs38
+option.target.cpuhs.hs38_linux = -mcpu=hs38_linux
+option.target.cpu700.arc700 = -mcpu=arc700
+option.target.cpu600.arc600 = -mcpu=arc600
+# -mfpu=
 option.target.fpu = FPU
+option.target.fpuem.none = None (-mfpu=none)
+option.target.fpuem.fpus = SP FPU (-mfpu=fpus)
+option.target.fpuem.fpus_div = SP FPU with DIV/SQRT instructions (-mfpu=fpus_div)
+option.target.fpuem.fpus_fma = SP FPU with fused instructions (-mfpu=fpus_fma)
+option.target.fpuem.fpus_all = SP FPU with all instructions (-mfpu=fpus_all)
+option.target.fpuem.fpuda = FPU with DP assist instructions (-mfpu=fpuda)
+option.target.fpuem.fpuda_div = FPU with DP assist instructions and DIV/SQRT extensions (-mfpu=fpuda_div)
+option.target.fpuem.fpuda_fma = FPU with DP assist instructions and fused extensions (-mfpu=fpuda_fma)
+option.target.fpuem.fpuda_all = FPU with DP assist instructions and all extensions (-mfpu=fpuda_all)
+option.target.fpuhs.none = None (-mfpu=none)
+option.target.fpuhs.fpus = SP FPU (-mfpu=fpus)
+option.target.fpuhs.fpus_div = SP FPU with DIV/SQRT instructions (-mfpu=fpus_div)
+option.target.fpuhs.fpus_fma = SP FPU with fused instructions (-mfpu=fpus_fma)
+option.target.fpuhs.fpus_all = SP FPU with all instructions (-mfpu=fpus_all)
+option.target.fpuhs.fpud = DP FPU (-mfpu=fpud)
+option.target.fpuhs.fpud_div = DP FPU with DIV/SQRT instructions (-mfpu=fpud_div)
+option.target.fpuhs.fpud_fma = DP FPU with fused instructions (-mfpu=fpud_fma)
+option.target.fpuhs.fpud_all = DP FPU with all instructions (-mfpu=fpud_all)
+option.target.fpx.none = None
+option.target.fpx.spfp = Single Precision FPX (-mspfp)
+option.target.fpx.spfp_fast = Single Precision FPX, fast (-mspfp-fast)
+option.target.fpx.spfp_compact = Single Precision FPX, compact (-mspfp-compact)
+option.target.fpx.dpfp = Double Precision FPX (-mdpfp)
+option.target.fpx.dpfp_fast = Double Precision FPX, fast (-mdpfp-fast)
+option.target.fpx.dpfp_compact = Double Precision FPX, compact (-mdpfp-compact)
+# -mmpy-option=
 option.target.mpy = Multiply instructions
+option.target.mpyem.none = No multiplier (-mmpy-option=none)
+option.target.mpyem.w = 16x16 multiplier, fully pipelined (-mmpy-option=w)
+option.target.mpyem.wlh1 = 32x32 multiplier, fully pipelined, 1 stage (-mmpy-option=wlh1)
+option.target.mpyem.wlh2 = 32x32 multiplier, fully pipelined, 2 stages (-mmpy-option=wlh2)
+option.target.mpyem.wlh3 = Two 16x16 multipliers, blocking, sequential (-mmpy-option=wlh3)
+option.target.mpyem.wlh4 = One 16x16 multiplier, blocking, sequential (-mmpy-option=wlh4)
+option.target.mpyem.wlh5 = One 32x4 multiplier, blocking, sequential (-mmpy-option=wlh5)
+option.target.mpyhs.none = No multiplier (-mmpy-option=none)
+option.target.mpyhs.mpy = -mmpy-option=mpy
+option.target.mpyhs.plus_dmpy = -mmpy-option=plus_dmpy
+option.target.mpyhs.plus_macd = -mmpy-option=plus_macd
+option.target.mpyhs.plus_qmacw = -mmpy-option=plus_qmacw
+option.target.mpy600.none = No multiplier
+option.target.mpy600.mul32x16 = 32x16-bit multiply and multiply-accumulate instructions (-mmul32x16)
+option.target.mpy600.mul64 = mul64 and mulu64 instructions (-mmul64)
+# Other -m
 option.target.divrem = Integer divide instructions (-mdiv-rem)
 option.target.code_density = Code density (-mcode-density)
 option.target.barrel_shifter = Barrel shifter (-mbarrel-shifter)
@@ -67,3 +150,13 @@ option.debugging = Debugging
 
 # Assembler
 option.assembler.flags = Assembler flags
+
+# Configurations
+configuration.debug = Debug
+configuration.release = Release
+
+#
+# Scanner Discovery Profile
+#
+extension.scdprofile.c.arc = ARC GNU C managed make per project SCD profile
+
